js/js.translator/testData/incremental/invalidation/gettersAndSettersInlining/lib1/l1.kt
open class Parent(var name: String) {
    val isValid = true
}